# thebook

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  fly.toml  load_rule_first_time.py  manage.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: categorize.yml  cora__process_mailbox.yml  fetch_bank_account_transfers.yaml  fetch_paypal_transactions.yaml  flyio.yml  match_receivable_fees.yml  process_core_email.yml  receivable_fees.yml  test.yml
docs/integrations/: bradesco.md  cora.md
src/: manage.py
src/moneybook/: asgi.py  settings.py  urls.py  wsgi.py
src/moneybook/bookkeeping/: admin.py  apps.py  managers.py  models.py  urls.py  views.py
src/moneybook/bookkeeping/migrations/: 0001_initial.py  (+2 more)
src/moneybook/core/: apps.py
src/moneybook/users/: admin.py  apps.py  forms.py  models.py
src/thebook/: categorizer.py  settings.py  urls.py
src/thebook/bookkeeping/: admin.py  managers.py  models.py  ofx_import.py  paypal_import.py  urls.py  views.py
thebook/: asgi.py  settings.py  urls.py  wsgi.py
thebook/base/: apps.py  urls.py  views.py
thebook/base/static/css/: custom.css
thebook/base/templatetags/: currency.py
thebook/base/tests/: test_dashboard.py  test_templatetags_currency.py
thebook/bookkeeping/: admin.py  apps.py  categorizer.py  managers.py  models.py  urls.py  views.py
thebook/bookkeeping/importers/: __init__.py  constants.py  csv.py  ofx.py
thebook/bookkeeping/migrations/: 0001_initial.py  0002_alter_category_options.py  0003_alter_transaction_options.py  0004_alter_cashbook_options.py  0005_cashbook_active.py  0006_transaction_tags.py  0007_alter_transaction_tags.py  0008_alter_document_notes.py  0009_alter_document_notes.py  0010_transaction_transaction_date_idx.py  0011_alter_document_transaction.py  0012_document_document_date.py  0013_categorymatchrule.py  0014_remove_categorymatchrule_valid_comparison_function_and_more.py  0015_rename_cashbook_bankaccount.py  0015_transaction_fornecedor.py  0016_rename_cash_book_transaction_bank_account.py  0017_alter_transaction_bank_account.py  0018_alter_transaction_bank_account.py  0019_document_content_type_document_object_id_and_more.py  0019_merge_20260205_2246.py  0020_remove_categorymatchrule_priority.py  0021_transaction_source.py
thebook/fornecedores/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
thebook/fornecedores/migrations/: 0001_initial.py  0002_entregafornecedor.py
thebook/fornecedores/tests/: test_forms.py  test_models.py  test_views.py
thebook/integrations/: apps.py
thebook/integrations/cora/: constants.py  credit_card_invoice.py  ofx_importer.py  services.py
thebook/integrations/paypal/: services.py
thebook/members/: admin.py  apps.py  forms.py  managers.py  models.py  signals.py  urls.py  views.py
thebook/members/migrations/: 0001_initial.py  0002_rename_amount_membership_membership_fee_amount_and_more.py  0003_receivablefee_unique_receivable_fee_in_month.py  0004_member_user.py  0005_remove_member_email_alter_member_user.py  0006_alter_member_phone_number.py  0007_membership_payment_method.py  0008_alter_member_options.py  0009_receivablefee_transaction_alter_member_name.py  0010_receivablefeetransactionmatchrule.py  0011_remove_receivablefeetransactionmatchrule_priority.py  0012_alter_membership_active.py  0013_alter_membership_payment_method_and_more.py  0014_member_cpf.py  0015_remove_member_cpf.py  0016_member_cpf.py  0017_membermetadata.py  0018_alter_membermetadata_key.py  0019_alter_membermetadata_key.py  0020_membershipform.py  0021_alter_membershipform_valid_until.py  0022_membershipform_processed.py
thebook/members/tests/: conftest.py
thebook/reimbursements/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
thebook/reimbursements/migrations/: 0001_initial.py  0002_reimbursementrequest_created_at_and_more.py
thebook/users/: admin.py  apps.py  forms.py  managers.py  models.py
thebook/users/migrations/: 0001_initial.py
thebook/utils/ofxparse/: __init__.py  mcc.py  ofxparse.py  ofxprinter.py  ofxutil.py
thebook/webhooks/: admin.py  apps.py  constants.py  managers.py  models.py  urls.py  views.py
thebook/webhooks/migrations/: 0001_initial.py  0002_openpixwebhookpayload_status.py  0003_paypalwebhookpayload.py  0004_paypalwebhookpayload_correlation_id_and_more.py  0005_alter_openpixwebhookpayload_status_and_more.py  0006_paypalwebhookpayload_internal_notes.py  0007_alter_openpixwebhookpayload_status_and_more.py  0008_paypalwebhookpayload_webhook_id.py
thebook/webhooks/openpix/: services.py
thebook/webhooks/paypal/: services.py
(+155 files in other folders)
